# alfred-snippet-manager

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/alfred_snippet_manager/: __about__.py  __init__.py  __main__.py
src/alfred_snippet_manager/cli/: __init__.py
src/alfred_snippet_manager/configs/: datapath.py
src/alfred_snippet_manager/controllers/: main.py
src/alfred_snippet_manager/models/: setting.py  snippet.py
tests/: conftest.py
tests/controllers/: test_main.py
tests/models/: test_setting.py  test_snippet.py
tests/resources/: test_setting.json
tests/resources/Alfred.alfredpreferences/snippets/snippets/: info.plist
tests/resources/snippet_resources/snippets/: download_file.py  find_list.py  new_snippets.py
tests/resources/snippets/: 22DA7982-910C-43C9-9BAD-BBE28F32F5FF.json  26DA005D-4000-4F6B-8441-A5E697CB4810.json  test.json
tests/resources/test_setting/: test_setting.json
